# EduNode

./: .gitignore  NOTICE  Package.resolved  Package.swift  README.md  README.zh-Hans.md
EduNode/: .env.dev.example  .env.example  ContentView.swift  CourseCreationSheet.swift  EduFlowProgressView.swift  EduLessonPlanExport.swift  EduLessonPlanPreviewSheet.swift  EduNodeApp.swift  EduNodePluginConfig.swift  EduNodes.swift  EduPlanning.swift  EduPresentation.swift  EduPresentationPreviewSheet.swift  GNodeTestView.swift  GNodeWorkspaceFile.swift  Item.swift  PresentationStylingView.swift  frontend.env  model_rules.json
EduNode.xcodeproj/: project.pbxproj
EduNodeTests/: AgentFeatureTests.swift  BackendIntegrationTests.swift  EduNodeTests.swift
EduNodeUITests/: EduNodeUITests.swift  EduNodeUITestsLaunchTests.swift
Scripts/: agent_logic_smoke.swift  llm_materialization_smoke.swift  run_agent_logic_smoke.sh  (+5 more)
Server/: .env.dev.example  .env.example  .env.production.example  llm_models.example.json  pyproject.toml  requirements.txt  run.py
Server/Sources/EduNodeBackendCore/: EduAgentJSONParser.swift  EduAgentProviderSettingsResolved.swift  EduBackendMinerUClient.swift  EduCanvasAgentMockEngine.swift  EduCanvasAgentPromptBuilder.swift  EduCanvasAgentService.swift  EduOpenAICompatibleClient.swift  EduServerAuth.swift  EduServerEnvironment.swift
Server/Sources/EduNodeServer/: EduNodeContracts+Content.swift  configure.swift  main.swift  routes.swift
Server/app/: __init__.py  auth.py  canvas_agent.py  config.py  json_utils.py  llm_router.py  main.py  mineru.py  usage.py
(+55 files in other folders)
