[project]
name = "edunode-server"
version = "0.1.0"
description = "EduNode Python backend for auth, LLM routing, canvas agents, and reference parsing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "litellm>=1.79,<2.0",
  "opentelemetry-api>=1.28,<2.0",
  "opentelemetry-sdk>=1.28,<2.0",
  "opentelemetry-exporter-otlp>=1.28,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"
